--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -159,7 +159,7 @@ config USB_ANDROID_SAMSUNG_COMPOSITE
 	  If you enable this option, android composite will be changed.
 
 config USB_ANDROID_SAMSUNG_MTP
-	boolean "Samsung MTP function"
+	bool "Samsung MTP function"
 	depends on USB_G_ANDROID && !SEC_FACTORY
 	help
 	  Provides Media Transfer Protocol (MTP) support
