KernelSU: Rework in progress - CONFIG_KERNELSU added to the lineage_defconfig - Later this will be changeable from the build script - For now use prebuilt kernel in releases until fixed

--- a/arch/arm64/configs/lineage_defconfig
+++ b/arch/arm64/configs/lineage_defconfig
@@ -34,6 +34,11 @@ CONFIG_AUDIT_WATCH=y
 CONFIG_AUDIT_TREE=y
 
 #
+# KernelSU Option
+#
+# CONFIG_KERNELSU is not set
+
+#
 # IRQ subsystem
 #
 CONFIG_GENERIC_IRQ_PROBE=y
