defconfig: Permissive added to config

--- a/arch/arm64/configs/lineage_defconfig
+++ b/arch/arm64/configs/lineage_defconfig
@@ -14,6 +14,13 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_THREAD_INFO_IN_TASK=y
 
 #
+# LineageOS Option
+#
+# CONFIG_KERNELSU is not set
+# CONFIG_SECURITY_SELINUX_ALWAYS_PERMISSIVE is not set
+CONFIG_SECURITY_SELINUX_ALWAYS_ENFORCE=y
+
+#
 # General setup
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
@@ -32,11 +39,6 @@ CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 CONFIG_AUDITSYSCALL=y
 CONFIG_AUDIT_WATCH=y
 CONFIG_AUDIT_TREE=y
-
-#
-# KernelSU Option
-#
-# CONFIG_KERNELSU is not set
 
 #
 # IRQ subsystem
