--- a/arch/arm64/configs/exynos850-a21snsxx_defconfig
+++ b/arch/arm64/configs/exynos850-a21snsxx_defconfig
@@ -13,6 +13,9 @@ CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_THREAD_INFO_IN_TASK=y
 
+# CONFIG_SECURITY_SELINUX_ALWAYS_ENFORCE is not set
+CONFIG_SECURITY_SELINUX_ALWAYS_PERMISSIVE=y
+
 #
 # General setup
 #
